refactor some code

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     <ngphotoslider data-images="images"
     data-animation="animated flipInY"
-    data-current-item-index="index" data-on-previous="updateTsPrevious()"  data-on-next="updateTsNext()">
+    data-current-item-index="index" data-on-previous="eventOnPrevious()"  data-on-next="eventOnNext()">
     </ngphotoslider>
 
   </div>
@@ -41,11 +41,23 @@
               <li>animated flipInY</li>
               <li>animated lightSpeedInRight</li>
               <li>animated vanishIn</li>
+              <li>animated rotateInDownLeft</li>
+              <li>animated flipInX</li>
+              <li>animated fadeIn</li>
+              <li>animated fadeInDown</li>
+              <li>animated fadeInLeft</li>
+              <li>animated fadeInRight</li>
+              <li>animated fadeOutRight</li>
+              <li>animated fadeOutLeft</li>
+              <li>animated rotateOutUpLeft</li>
+              <li>animated bounceIn</li>
             </ul>
             <h5> <a target="_blank" href="http://www.minimamente.com/example/magic_animations/">Magic CSS</a></h5>
             <ul>
               <li>magictime puffIn</li>
               <li>magictime puffOut</li>
+              <li>magictime twisterInDown</li>
+              <li>magictime rotateRight</li>
             </ul>
       </div>
 
