--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <div class="col-xs-12 col-sm-9">
 
     <ngphotoslider data-images="images"
-    data-animation="animated flipInY"
+    data-animation="animated fadeIn"
     data-current-item-index="index" data-on-previous="eventOnPrevious()"  data-on-next="eventOnNext()">
     </ngphotoslider>
 
