--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 <div class="row row-offcanvas row-offcanvas-right">
 
-  <div class="col-xs-12 col-sm-9">
+  <div class="col-md-6 col-xs-6 col-sm-4">
 
     <ngphotoslider data-images="images"
     data-animation="animated fadeIn"
@@ -31,7 +31,7 @@
 
   </div>
 
-  <div class="col-xs-6 col-sm-3 sidebar-offcanvas">
+  <div class="col-xs-3 col-sm-3 sidebar-offcanvas">
 
 
       <h5> Data animations samples for ngphotoslider</h5>
