linked images atribute true || false

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <div class="col-md-6 col-xs-6 col-sm-4">
 
     <ngphotoslider data-images="images"
-    data-animation="animated fadeIn"
+    data-animation="animated fadeIn" data-linked-images="true"
     data-current-item-index="index" data-on-previous="eventOnPrevious()"  data-on-next="eventOnNext()">
     </ngphotoslider>
 
